# yi-config

./: .travis.yml  Main.hs  Makefile  e.cabal  shell.nix  stack.yaml  yi.hs
modules/: Fuzzy.hs  FuzzyFile.hs  FuzzyMatchScore.hs  FuzzySnippet.hs  IdrisIDE.hs  IdrisIDESexp.hs  IdrisIDESexpCopyPasteFromIdris.hs  LuaMode.hs  Make.hs  MySnippets.hs  PyflakesMode.hs  RainbowMode.hs  Snippet.hs  SnippetInitial.hs  Warning.hs  WarningTest.hs  YiWarning.hs
modules/Snippet/: Internal.hs
test/: SnippetTest.hs  WarningTest.hs
