name:                e
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable e
  main-is:             Main.hs
  other-modules:
      Fuzzy
      FuzzyFile
      FuzzyMatchScore
      Make
      MySnippets
      PyflakesMode
      RainbowMode
      Snippet
      Snippet.Internal
      Warning
      YiWarning
  build-depends:
      base >=4.6 && <4.9
    , binary
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , free
    , lens
    , mtl
    , parallel
    , parsec
    , process >= 1.2.3
    , regex-applicative
    , srcloc
    , text
    , transformers-base
    , trifecta
    , utf8-string
    , vector
    , vector-algorithms
    , yi-core
    , yi-frontend-vty
    , yi-keymap-vim
    , yi-language
    , yi-misc-modes
    , yi-rope
  hs-source-dirs: modules, .
  ghc-options: -O2 -threaded -Wall -ferror-spans -fcontext-stack=110
  default-language:    Haskell2010

Test-Suite warningtest
  type: exitcode-stdio-1.0
  main-is: WarningTest.hs
  hs-source-dirs: modules, test
  ghc-options: -threaded -Wall -ferror-spans
  default-language:    Haskell2010
  build-depends:
      base >=4.6 && <4.9
    , binary
    , parsec
    , tasty
    , tasty-hunit
    , tasty-th
    , text
    , yi >= 0.11.2

Test-Suite snippettest
  type: exitcode-stdio-1.0
  main-is: SnippetTest.hs
  hs-source-dirs: modules, test
  ghc-options: -threaded -Wall -ferror-spans
  default-language:    Haskell2010
  build-depends:
      base >=4.6 && <4.9
    , binary
    , containers
    , data-default
    , free
    , lens
    , mtl
    , parsec
    , tasty
    , tasty-hunit
    , tasty-th
    , text
    , yi >= 0.11.2
    , yi-rope
