name:                e
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable e
  main-is:             Main.hs
  other-modules:
      Fuzzy
      FuzzyFile
      FuzzyMatchScore
      LSP
      Make
      MySnippets
      PyflakesMode
      YiWarning
  build-depends:
      base >=4.6 && <5
    , binary
    , bytestring
    , compiler-warnings
    , containers
    , data-default
    , directory
    , filepath
    , free
    , microlens-platform
    , mtl
    , parallel
    , parsec
    , process >= 1.2.3
    , regex-applicative
    , srcloc
    , text
    , transformers-base
    , utf8-string
    , vector
    , vector-algorithms
    , yi-core >= 0.15
    , yi-frontend-vty >= 0.15
    , yi-keymap-vim >= 0.15
    , yi-misc-modes >= 0.15
    , yi-rope
    , yi-snippet >= 0.15
  hs-source-dirs: modules, .
  ghc-options: -O2 -threaded -Wall -ferror-spans
  default-language:    Haskell2010