name:                e
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Dmitry Ivanov
maintainer:          ethercrow@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable e
  main-is:             Main.hs
  other-modules:
      Fuzzy
      FuzzyFile
      FuzzyMatchScore
      Make
      MySnippets
      PyflakesMode
      RainbowMode
      YiWarning
  build-depends:
      base >=4.6 && <5
    , binary
    , bytestring
    , compiler-warnings
    , containers
    , data-default
    , directory
    , filepath
    , free
    , microlens-platform
    , mtl
    , parallel
    , parsec
    , process >= 1.2.3
    , regex-applicative
    , srcloc
    , text
    , transformers-base
    , utf8-string
    , vector
    , vector-algorithms
    , yi-core >= 0.16
    , yi-frontend-vty
    , yi-keymap-vim
    , yi-language
    , yi-misc-modes
    , yi-rope
    , yi-snippet
  hs-source-dirs: modules, .
  ghc-options: -O2 -threaded -Wall -ferror-spans
  default-language:    Haskell2010